Use ViewPager instead of HorizontalScrollView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
     <string name="raum">Raum</string>
     <string name="lehrer">Lehrer</string>
     <string name="klasse">Klasse</string>
+
+    <string-array
+        name="weekdays">
+        <item>Montag</item>
+        <item>Dienstag</item>
+        <item>Mittwoch</item>
+        <item>Donnerstag</item>
+        <item>Freitag</item>
+    </string-array>
 </resources>
